# outdatty

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  flake.nix  outdatty.yaml  tarpaulin.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.mindtape/: config.toml
examples/: outdatty.yaml
schema/: outdatty.schema.json
skills/outdatty/: SKILL.md
src/: cli.rs  commands.rs  coverage.rs  engine.rs  error.rs  hashing.rs  lib.rs  lock.rs  main.rs  manifest.rs  report.rs  resolve.rs  style.rs
tasks/: emit-changed-artifact-paths-for-piping-to-a-diff-tool.typ  make-group-dependents-optional-default-empty.typ  report-declared-dependents-in-plain-and-json.typ  write-broad-outdatty-usage-skill.typ
tests/: cli.rs
www/: index.html
